@@ -17,7 +17,10 @@ package org.apache.solr.store.blockcache;
  * limitations under the License.
  */
 
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -26,15 +29,23 @@ import java.util.concurrent.atomic.AtomicInteger;
  */
 public class BlockDirectoryCache implements Cache {
   private final BlockCache blockCache;
-  private AtomicInteger counter = new AtomicInteger();
-  private Map<String,Integer> names = new ConcurrentHashMap<>();
-  private String path;
-  private Metrics metrics;
+  private final AtomicInteger counter = new AtomicInteger();
+  private final Map<String,Integer> names = new ConcurrentHashMap<>();
+  private Set<BlockCacheKey> keys;
+  private final String path;
+  private final Metrics metrics;
   
   public BlockDirectoryCache(BlockCache blockCache, String path, Metrics metrics) {
+    this(blockCache, path, metrics, false);
+  }
+  
+  public BlockDirectoryCache(BlockCache blockCache, String path, Metrics metrics, boolean releaseBlocks) {
     this.blockCache = blockCache;
     this.path = path;
     this.metrics = metrics;
+    if (releaseBlocks) {
+      keys = Collections.synchronizedSet(new HashSet<BlockCacheKey>());
+    }
   }
   
   /**
@@ -64,6 +75,9 @@ public class BlockDirectoryCache implements Cache {
     blockCacheKey.setBlock(blockId);
     blockCacheKey.setFile(file);
     blockCache.store(blockCacheKey, blockOffset, buffer, offset, length);
+    if (keys != null) {
+      keys.add(blockCacheKey);
+    }
   }
   
   @Override
@@ -98,6 +112,15 @@ public class BlockDirectoryCache implements Cache {
     // possible if the file is empty
     if (file != null) {
       names.put(dest, file);
+    }
+  }
+
+  @Override
+  public void releaseResources() {
+    if (keys != null) {
+      for (BlockCacheKey key : keys) {
+        blockCache.release(key);
+      }
     }
   }
 }
